<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite_user"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuTheme"
        android:icon="@drawable/baseline_night_mode_24"
        android:title="@string/set_theme"
        app:showAsAction="ifRoom" />
</menu>