...
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailAvatar"
        app:layout_constraintStart_toEndOf="@+id/textDetailFollowers"
        app:layout_constraintTop_toTopOf="@+id/detailAvatar" />

    <TextView
        android:id="@+id/detailUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/detailAvatar"
...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavoriteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:enabled="false"
        android:contentDescription="@string/button_favorite"
        app:srcCompat="@drawable/baseline_favorite_border_24"
...
